# aixv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  conformance.yml  publish.yml  scorecard.yml
docs/: AIXV_STANDARD.md  ASSURANCE_LEVELS.md  COMPATIBILITY.md  CONFORMANCE.md  CRITIQUES_AND_DECISIONS.md  DESIGN_PRINCIPLES.md  GOVERNANCE.md  NORMATIVE_CORE.md  PROFILES.md  PROVENANCE_BRIDGE.md  PUBLISHER_GUIDE.md  QUALITY.md  QUALITY_BAR.md  REGISTRIES.md  REPO_CONTROLS.md  TERMINOLOGY.md  THREAT_MODEL.md
docs/conformance/fixtures/: policy.invalid.no_subjects.json  policy.valid.json  record.policy.sample.json
src/aixv/: __init__.py  cli.py  conformance.py  core.py
tests/: test_cli_contract.py  test_conformance_command.py  test_conformance_fixtures.py  test_core_primitives.py
